tests/ui/generic-const-items/const-trait-impl.stderr
error[E0015]: cannot call non-const fn `<T as Create>::create` in constants
  --> $DIR/const-trait-impl.rs:11:30
   |
LL | const CREATE<T: Create>: T = T::create();
   |                              ^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
